# template_vscode_project_chapterwise

./: .clangd  .gitignore  CMakeLists.txt
build_scripts/linux/: _variables.sh
build_scripts/macos/: _variables.zsh  build_cmake.zsh  cleanbuild.zsh  create_project.zsh  goto.zsh  rebuild.zsh  run_project.zsh  set_aliases.zsh
build_scripts/windows/: _variables.ps1  build_cmake.ps1  build_msvc.ps1  cleanbuild.ps1  create_project.ps1  git_pull.ps1  git_push.ps1  goto.ps1  locking_process.ps1  rebuild.ps1  run_project.ps1  set_aliases.ps1
cmake_macros/: getLibLoc.cmake  prac.cmake
common/: CMakeLists.txt  project_paths.h.in
common/test_class/: test.cpp  test.h
src/Chapter01/00_hello_world/: CMakeLists.txt
src/Chapter01/00_hello_world/src/: main.cpp
src/Chapter01/01_test_project/: CMakeLists.txt
src/Chapter01/01_test_project/src/: 01_test_project.cpp
